Teting with a ProcessBuilder